manifests/web/service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-$CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_ENVIRONMENT_SLUG
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: $CI_ENVIRONMENT_SLUG
