manifests/web/ingress-web.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-$CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
    environment: $CI_ENVIRONMENT_SLUG
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress-class: 'nginx'
spec:
  tls:
  - hosts:
    - $CI_ENVIRONMENT_HOSTNAME
    secretName: $CI_ENVIRONMENT_SLUG-tls
  rules:
  - host: $CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: web-$CI_ENVIRONMENT_SLUG
          servicePort: $PORT
